--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
         <div id="title-box">
 
           <!-- Level 4 'PHARRELL WILLIAMS' Header -->
-
+           <header>PHARRELL WILLIAMS</header>
           <!-- Level 2 'HAPPY' Header -->
-
+            <h2>HAPPY</h2>
           <!-- Level 4 '| FROM DESPICABLE ME...' Header -->
-
+            <header>| FROM DESPICABLE ME...</header>
         </div>
       </div>
 
