Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <!-- Level 2 'HAPPY' Header -->
             <h2>HAPPY</h2>
           <!-- Level 4 '| FROM DESPICABLE ME...' Header -->
-            <header>| FROM DESPICABLE ME...</header>
+            <header>| FROM DESPICABLE ME...|</header>
         </div>
       </div>
 
